# Koilo-Engine

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  KoiloEngine.code-workspace  README.md  SECURITY.md  build.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
.scripts/: GeneratePTXAll.py  GenerateuCore3DAll.py
assets/cameras/: DeltaDisplayFursuitL.klcam  DeltaDisplayFursuitR.klcam  DeltaDisplayL.klcam  DeltaDisplayR.klcam  HUB75_64x64.klcam  HertzMini.klcam  LinearPixels.klcam  P3HUB75.klcam  ProtoDR.klcam  ProtoDRMini.klcam  WS35Pixels.klcam
assets/editor/: editor_host.ks
assets/kmesh/: artisans.kmesh  cynder.kmesh  nukude_face.kmesh  nukude_face3.kmesh  nukude_flat.kmesh  nukude_no_eye.kmesh
assets/scenes/: empty_room.kscene
assets/textures/: artisans.ktex  cynder.ktex
assets/ui/: editor.kml  editor.kss  showcase.kml  showcase.kss
bindings/c_api/: README.md
bindings/lua/: README.md
bindings/python/: README.md
cmake/: toolchain-pi-aarch64.cmake
docs/: general_formatting.md  kmesh.md  koilo_script_spec.md  kscene-format.md  ksl.md
docs/abi/: abi-v3.json
docs/architecture/: optimizations.md  overview.md
docs/assets/: kmesh.md
docs/modules/: custom_modules.md
docs/reflection/: reflection.md
docs/scripting/: koilo_script_spec.md
docs/ui/: kml_kss.md
engine/include/: README.md
engine/koilo/: koiloall.hpp  koiloapplication.cpp  koiloapplication.hpp
engine/koilo/app/: koilo_runner.cpp  koiloapplication.cpp  koiloapplication.hpp
engine/koilo/assets/: koilomesh_loader.cpp  koilomesh_loader.hpp
engine/koilo/debug/: debug_visualization.cpp  debug_visualization.hpp  debugdraw.cpp  debugdraw.hpp  debugrenderer.cpp  debugrenderer.hpp  profiler.cpp  profiler.hpp
engine/koilo/ecs/: component.cpp  component.hpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  script_entity_manager.cpp  script_entity_manager.hpp  system.hpp
engine/koilo/kernel/: cancellation_token.hpp  capabilities.hpp  contracts.hpp  debug_overlay.cpp  debug_overlay.hpp  deprecation.hpp  engine_error.hpp  gpu_registry.hpp  kernel.cpp  kernel.hpp  koilo_module_sdk.h  message_bus.cpp  message_bus.hpp  message_types.hpp  module.hpp  module_abi_adapters.cpp  module_abi_adapters.hpp  module_api.hpp  module_fault.hpp  module_loader.cpp  module_loader.hpp  module_manager.cpp  module_manager.hpp  register_services.cpp  register_services.hpp  schema_migrator.hpp  schema_version.hpp  service_registry.cpp  service_registry.hpp  sim_cvars.cpp  sim_cvars.hpp  stability.hpp  task_group.hpp  thread_pool.cpp  thread_pool.hpp  unified_module.hpp  version.hpp.in
engine/koilo/ksl/: ksl.hpp  ksl_elf_loader.hpp  ksl_elf_types.hpp  ksl_macros.hpp  ksl_math.hpp  ksl_memory.hpp  ksl_module.hpp  ksl_registry.hpp  ksl_shader.hpp  ksl_symbols.hpp  ksl_types.hpp
engine/koilo/modules/: koilo_module_sdk.h  (+3 more)
engine/koilo/systems/display/: CMakeLists.txt  displayinfo.hpp  displaymanager.cpp  displaymanager.hpp  framebuffer.hpp  idisplaybackend.hpp  igpu_display_backend.hpp  pixelformat.hpp
engine/koilo/systems/display/backends/: nullbackend.cpp  nullbackend.hpp
engine/koilo/systems/display/backends/embedded/: hub75backend.hpp
engine/koilo/systems/display/backends/gpu/: openglbackend.cpp  openglbackend.hpp  sdl2backend.cpp  sdl2backend.hpp  sdl3backend.cpp  sdl3backend.hpp  vulkanbackend.cpp  vulkanbackend.hpp
engine/koilo/systems/display/backends/led/: led_display_backend.cpp  led_display_backend.hpp
engine/koilo/systems/display/led/: camera_layout.cpp  camera_layout.hpp  iled_transport.hpp  led_frame_encoder.cpp  led_frame_encoder.hpp  led_gather_compute.cpp  led_gather_compute.hpp
engine/koilo/systems/display/led/module/: led_volume_module.cpp  led_volume_module.hpp
engine/koilo/systems/display/preview/: live_preview_module.cpp  live_preview_module.hpp
examples/: CMakeLists.txt
examples/kscene_demo/: kscene_demo.ks
examples/led_demo/: led_demo.ks
examples/modules/: CMakeLists.txt  demo_all_modules.ks  fx_module.cpp  game_mode_module.cpp  main.cpp  run.sh  sensor_module.cpp
examples/obj_scene/: main.cpp  obj_scene.ks  run.sh
examples/physics_demo/: physics_demo.ks  physics_demo_world.kscene  run.sh
examples/scene_3d/: main.cpp  run.sh  scene_3d.ks
examples/space_shooter/: effects.ks  enemies.ks  main.cpp  player.ks  run.sh  space_shooter.ks  weapons.ks
examples/stress_test/: main.cpp  run.sh  stress_test.ks
examples/syntax_demo/: main.cpp  run.sh  syntax_demo.ks
examples/ui_demo/: main.cpp  run.sh  ui_demo.ks  ui_demo_kml.ks
examples/ui_showcase/: main.cpp  run.sh  ui_showcase.ks
lib/ptx_c_api/: README.md
lib/ptx_python/: README.md
lib/uc3d/: ucore3dall.hpp
scripts/: GeneratePTXAll.py  checknamespace.py  consoleoutput.py  convert_camera_h.py  generatekoiloall.py  generatereflectionentry.py  generatetestskeletons.py  pi_deploy.sh  updatekoiloregistry.py  validate_reflection_headers.py
shaders/: audio_reactive.ksl.hpp  blit.frag  blit.vert  depth.ksl.hpp  gradient.ksl.hpp  horizontal_rainbow.ksl.hpp  image.ksl.hpp  image_sequence.ksl.hpp  line.vert  normal.ksl.hpp  oscilloscope.ksl.hpp  pbr.ksl.hpp  phong.ksl.hpp  procedural_noise.ksl.hpp  scene.vert  sky.ksl.hpp  spectrum_analyzer.ksl.hpp  spiral.ksl.hpp  texture.ksl.hpp  tv_static.ksl.hpp  ui.frag  ui.vert  uniform_color.ksl.hpp  uvmap.ksl.hpp  vector_field_2d.ksl.hpp
tests/engine/: test.cpp  testkoiloapplication.cpp  testkoiloapplication.hpp
tests/scripts/: test_generatekoiloall.py  test_generatereflectionentry.py  test_generatetestskeletons.py  test_updatekoiloregistry.py
tools/: abi_check.py
tools/asset-conversion/: FBXReader.py  README.md  convert_texture.py  convert_to_kmesh.py
tools/koilo-compile-module/: koilo-compile-module.sh  koilo-new-module.sh
tools/ksl/: README.md  ksl_codegen.py  ksl_compiler.py
tools/solver_bench/: CMakeLists.txt  main.cpp  scene.hpp  scenes.cpp
tools/teensy_led_volume_hub75/: led_volume_hub75.ino  platformio.ini
tools/vscode-koiloscript/: .vscodeignore  README.md  install.sh  language-configuration.json  package.json
(+1419 files in other folders)
